opam-version: "2.0"
name: "mapper"
version: "0.9"
maintainer: "Markus Rudy <webmaster@burgerdev.de>"
authors: ["Markus Rudy <webmaster@burgerdev.de>"]
homepage: "https://github.com/burgerdev/ocaml-addressmapper"
doc: "https://io.burgerdev.de/docs/ocaml-addressmapper"
bug-reports: "https://github.com/burgerdev/ocaml-addressmapper/issues"
dev-repo: "git+https://github.com/burgerdev/ocaml-addressmapper.git"
license: "GPLv3"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" { >= "4.06.0" }
  "sexplib" "mparser" "cmdliner" "logs" "fmt" "dune" "str" "unix"
]
